Finish polymorphism section

--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "→ Share behaviors across objects\n",
     "\n",
-    "→ There are two types: static (overloading) and dynamic (overriding)\n"
+    "→ There are two types: static (method/operator overloading) and dynamic (method overriding); Python is best suited for dynamic\n"
    ]
   },
   {
@@ -316,7 +316,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Finally, let's consider polymorphism. Let's make an abstract method for prepare, and implement it in\n",
+    "# banana as well. Additionally, let's demonstrate operator overloading via the __add__ method:\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,8 +331,6 @@
     "Maybe mention ABCs, now that we've just seen abstration in action.\n",
     "\n",
     "Also, TODO, mention 1 vs 2 underscores\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "**Benefits**\n",
@@ -344,12 +346,12 @@
     "- Reduced Redundancy: Avoids redundancy through common code usage.\n",
     "\n",
     "\n",
-    "- **Criticisms**\n",
-    "    - Focus on Objects: May overshadow algorithms and functional aspects.\n",
-    "    - Time-Consuming: Can be time-consuming to write and compile.\n",
-    "    - Steeper Learning Curve: Concepts can be difficult for beginners.\n",
-    "    - Overhead: Performance overhead due to abstraction layers.\n",
-    "    - Complexity: Can lead to complex and tightly coupled class hierarchies."
+    "**Criticisms**\n",
+    "- Focus on Objects: May overshadow algorithms and functional aspects.\n",
+    "- Time-Consuming: Can be time-consuming to write and compile.\n",
+    "- Steeper Learning Curve: Concepts can be difficult for beginners.\n",
+    "- Overhead: Performance overhead due to abstraction layers.\n",
+    "- Complexity: Can lead to complex and tightly coupled class hierarchies."
    ]
   },
   {
