--- a/Demo_Pillars_Solutions.ipynb
+++ b/Demo_Pillars_Solutions.ipynb
@@ -388,6 +388,9 @@
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"A smoothie made of {', '.join(map(str, self.contents))}\"\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Smoothie(self.contents + other.contents)\n",
     "\n",
     "\n",
     "class Fruit:\n",
