For real this time, forgot to hit save (:

--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -326,7 +326,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Remarks\n",
+    "## Final Remarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "Maybe mention ABCs, now that we've just seen abstration in action.\n",
     "\n",
@@ -353,11 +360,6 @@
     "- Overhead: Performance overhead due to abstraction layers.\n",
     "- Complexity: Can lead to complex and tightly coupled class hierarchies."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
