Clean up; add closing

--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -333,13 +333,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "Maybe mention ABCs, now that we've just seen abstration in action.\n",
-    "\n",
-    "Also, TODO, mention 1 vs 2 underscores\n",
-    "\n",
-    "\n",
     "**Benefits**\n",
     "- Modularity: Self-contained objects; easier debugging and collaboration.\n",
     "- Reusability: Inheritance allows code reuse.\n",
@@ -359,6 +352,13 @@
     "- Steeper Learning Curve: Concepts can be difficult for beginners.\n",
     "- Overhead: Performance overhead due to abstraction layers.\n",
     "- Complexity: Can lead to complex and tightly coupled class hierarchies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](img/a_smoothie.jpg)"
    ]
   }
  ],
