--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -333,25 +333,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. **Objects** are instantiations of classes.\n",
+    "\n",
+    "2. **Classes** are blueprints that define attributes and methods.\n",
+    "\n",
+    "3. **Encapsulation** keeps object-related info inside the object, and sometimes makes it private.\n",
+    "\n",
+    "4. **Abstraction** hides distracting details about implementation.\n",
+    "\n",
+    "5. **Inheritance** creates hiearchies between objects, and encourages code reuse.\n",
+    "\n",
+    "6. **Polymorphism** shares behavior across objects, via both overloading and overriding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Benefits**\n",
-    "- Modularity: Self-contained objects; easier debugging and collaboration.\n",
-    "- Reusability: Inheritance allows code reuse.\n",
-    "- Scalability: Implement different functionalities independently.\n",
-    "- Security: Encapsulation and abstraction hide sensitive code.\n",
-    "- Flexibility: Polymorphism enables object interchangeability.\n",
-    "- Maintainability: Clear modular structure simplifies updates and maintenance.\n",
-    "- Extensibility: New features can be added with minimal changes.\n",
-    "- Improved Design: Encourages better organization and design (e.g., SOLID principles).\n",
-    "- Real-World Modeling: Natural mapping to real-world entities.\n",
-    "- Reduced Redundancy: Avoids redundancy through common code usage.\n",
     "\n",
+    "- **Modularity:** Self-contained objects; easier debugging and collaboration.\n",
     "\n",
+    "- **Reusability:** Inheritance allows code reuse.\n",
+    "\n",
+    "- **Scalability:** Implement different functionalities independently.\n",
+    "\n",
+    "- **Security:** Encapsulation and abstraction hide sensitive code.\n",
+    "\n",
+    "- **Flexibility:** Polymorphism enables object interchangeability.\n",
+    "\n",
+    "- **Maintainability:** Clear modular structure simplifies updates and maintenance.\n",
+    "\n",
+    "- **Extensibility:** New features can be added with minimal changes.\n",
+    "\n",
+    "- **Improved Design:** Encourages better organization and design (e.g., SOLID principles).\n",
+    "\n",
+    "- **Real-World Modeling:** Natural mapping to real-world entities.\n",
+    "\n",
+    "- **Reduced Redundancy:** Avoids redundancy through common code usage.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Criticisms**\n",
-    "- Focus on Objects: May overshadow algorithms and functional aspects.\n",
-    "- Time-Consuming: Can be time-consuming to write and compile.\n",
-    "- Steeper Learning Curve: Concepts can be difficult for beginners.\n",
-    "- Overhead: Performance overhead due to abstraction layers.\n",
-    "- Complexity: Can lead to complex and tightly coupled class hierarchies."
+    "\n",
+    "- **Focus** on Objects: May overshadow algorithms and functional aspects.\n",
+    "\n",
+    "- **Time-Consuming:** Can be time-consuming to write and compile.\n",
+    "\n",
+    "- **Steeper** Learning Curve: Concepts can be difficult for beginners.\n",
+    "\n",
+    "- **Overhead:** Performance overhead due to abstraction layers.\n",
+    "\n",
+    "- **Complexity:** Can lead to complex and tightly coupled class hierarchies.\n"
    ]
   },
   {
