Revise final remarks

--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -333,9 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Objects** are instantiations of classes.\n",
-    "\n",
-    "2. **Classes** are blueprints that define attributes and methods.\n",
+    "1. **Objects** are instantiations of classes; **classes** are blueprints that define attributes and methods.\n",
     "\n",
     "3. **Encapsulation** keeps object-related info inside the object, and sometimes makes it private.\n",
     "\n",
@@ -358,19 +356,11 @@
     "\n",
     "- **Scalability:** Implement different functionalities independently.\n",
     "\n",
-    "- **Security:** Encapsulation and abstraction hide sensitive code.\n",
-    "\n",
     "- **Flexibility:** Polymorphism enables object interchangeability.\n",
     "\n",
     "- **Maintainability:** Clear modular structure simplifies updates and maintenance.\n",
     "\n",
-    "- **Extensibility:** New features can be added with minimal changes.\n",
-    "\n",
-    "- **Improved Design:** Encourages better organization and design (e.g., SOLID principles).\n",
-    "\n",
-    "- **Real-World Modeling:** Natural mapping to real-world entities.\n",
-    "\n",
-    "- **Reduced Redundancy:** Avoids redundancy through common code usage.\n"
+    "- **Real-World Modeling:** Natural mapping to real-world entities."
    ]
   },
   {
