--- a/Demo_Pillars.ipynb
+++ b/Demo_Pillars.ipynb
@@ -369,11 +369,11 @@
    "source": [
     "**Criticisms**\n",
     "\n",
-    "- **Focus** on Objects: May overshadow algorithms and functional aspects.\n",
+    "- **Focus on Objects:** May overshadow algorithms and functional aspects.\n",
     "\n",
     "- **Time-Consuming:** Can be time-consuming to write and compile.\n",
     "\n",
-    "- **Steeper** Learning Curve: Concepts can be difficult for beginners.\n",
+    "- **Steeper Learning Curve:** Concepts can be difficult for beginners.\n",
     "\n",
     "- **Overhead:** Performance overhead due to abstraction layers.\n",
     "\n",
