Demo and exercise updates

--- a/OOP_Demo.ipynb
+++ b/OOP_Demo.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can think of the pillars of OOP as principles, concepts, or practical tools that guide how you design and implement object oriented systems. \n",
+    "You can think of the pillars of OOP as principles that guide the design and implementation of object oriented systems. \n",
     " \n",
     " These principles help ensure that your code is modular, reusable, and maintainable."
    ]
