--- a/OOP_Demo.ipynb
+++ b/OOP_Demo.ipynb
@@ -20,6 +20,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EmailService:\n",
+    "    def send_email(self, recipient, subject, message):\n",
+    "        print(f\"Sending email to {recipient}\\nSubject: {subject}\\nMessage: {message}\")\n",
+    "\n",
+    "# Usage\n",
+    "email_service = EmailService()\n",
+    "email_service.send_email(\"user@example.com\", \"Welcome!\", \"Thank you for signing up.\")\n",
+    "# Output: Sending email to user@example.com\n",
+    "#         Subject: Welcome!\n",
+    "#         Message: Thank you for signing up."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,9 +181,7 @@
     "\n",
     "    # blend contents\n",
     "    print(\"Blending contents\")\n",
-    "    print(f\"Made smoothie out of: {contents_of_blender}\")\n",
-    "    \n",
-    "\n"
+    "    print(f\"Made smoothie out of: {contents_of_blender}\")"
    ]
   },
   {
@@ -200,7 +216,7 @@
     "**Benefits:** \n",
     "- Improved Code Maintainability: By restricting access to internal states, it makes the code easier to maintain and modify.\n",
     "- Enhanced Security: Prevents unintended interference and misuse of the object’s internal state.\n",
-    "- Simplifies Debugging: Errors are easier to trace and fix because the object's behavior is controlled through well-defined interfaces."
+    "- Simplifies Debugging: Errors are easier to trace and fix because the object's behavior is controlled through well-defined interfaces.\n"
    ]
   },
   {
@@ -212,6 +228,52 @@
     "# Now let's encapsulate. Let's bundle everything first, then restrict access in ways that might mitigate\n",
     "# electrocution and over-filled blenders:\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes on privacy:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Private attributes and methods can (or should) only be accessed internally.\n",
+    "\n",
+    "We can indicate privacy with leading underscores, but note, there's no way in Python to truly enforce privacy.\n",
+    "\n",
+    "**Single leading underscore:** \n",
+    "- eg, `_my_attribute`\n",
+    "- weak \"internal use\" indicator\n",
+    "- `from M import *` does not import objects whose name starts with an underscore\n",
+    "- convention to indicate to programmers that the attribute or method is intended for internal use\n",
+    "\n",
+    "**Double leading underscore (aka, dunder):**\n",
+    "- eg, `__my_other_attribute`\n",
+    "- This is \"name mangling,\" and it essentially renames the attribute to avoid name clashes in subclasses\n",
+    "- The interpreter changes the name by adding `_ClassName` at the beginning. For example, `__my_other_attribute` in class `MyClass` becomes `_MyClass__my_other_attribute`\n",
+    "- This provides a stronger indicator of intended privacy and makes it harder to accidentally override private attributes in subclasses\n",
+    "- Read more at the [Python docs](https://docs.python.org/3/tutorial/classes.html#private-variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self):\n",
+    "        self._x = \"slightly private!\"\n",
+    "        self.__y = \"very private!\"\n",
+    "\n",
+    "my_instance = MyClass()\n",
+    "print(my_instance._x) # prints \"slightly private\"\n",
+    "print(my_instance.__y) # raises AttributeError: 'MyClass' object has no attribute '__y'\n",
+    "#print(my_instance._MyClass__y) # technically prints \"very private!\", but this really shouldn't be done"
    ]
   },
   {
@@ -326,6 +388,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Combining These Concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Abstract Base Classes (ABCs) = Abstraction + Inheritance\n",
+    "\n",
+    "Abstract Base Classes (ABCs) in Python provide a way to define abstract methods that must be implemented by any subclass. They are used to define a common interface for a group of related classes. An abstract base class cannot be instantiated on its own and serves as a blueprint for other classes.\n",
+    "\n",
+    "Key Points:\n",
+    "\n",
+    "- ABCs ensure that derived classes implement specific methods, enforcing a contract for subclasses.\n",
+    "- ABCs are defined using the abc module in Python.\n",
+    "- Methods declared with the `@abstractmethod` decorator must be implemented by subclasses.\n",
+    "- You cannot create an instance of an abstract base class directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Animal(ABC):\n",
+    "    @abstractmethod\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "# Example usage:\n",
+    "# animal = Animal()  # This will raise a TypeError\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "print(dog.make_sound())  # Output: Woof!\n",
+    "print(cat.make_sound())  # Output: Meow!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mixin Classes = Inheritance + Encapsulation\n",
+    "\n",
+    "Mixins are a form of multiple inheritance where a class can inherit attributes and methods from multiple parent classes, encapsulating shared functionality in reusable components."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOG: Dog is making a sound\n",
+      "Woof!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LoggerMixin:\n",
+    "    def log(self, message):\n",
+    "        print(f\"LOG: {message}\")\n",
+    "\n",
+    "class Animal:\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "class Dog(Animal, LoggerMixin):\n",
+    "    def make_sound(self):\n",
+    "        self.log(\"Dog is making a sound\")\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "dog = Dog()\n",
+    "print(dog.make_sound())  # Output: LOG: Dog is making a sound \\n Woof!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Final Remarks"
    ]
   },
@@ -333,6 +497,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Summary\n",
+    "\n",
     "1. **Objects** are instantiations of classes; **classes** are blueprints that define attributes and methods.\n",
     "\n",
     "3. **Encapsulation** keeps object-related info inside the object, and sometimes makes it private.\n",
@@ -348,7 +514,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Benefits**\n",
+    "### Criticisms\n",
+    "\n",
+    "- **Focus on Objects:** May overshadow algorithms and functional aspects.\n",
+    "\n",
+    "- **Time-Consuming:** Can be time-consuming to write and compile.\n",
+    "\n",
+    "- **Steeper Learning Curve:** Concepts can be difficult for beginners.\n",
+    "\n",
+    "- **Overhead:** Performance overhead due to abstraction layers.\n",
+    "\n",
+    "- **Complexity:** Can lead to complex and tightly coupled class hierarchies.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benefits\n",
     "\n",
     "- **Modularity:** Self-contained objects; easier debugging and collaboration.\n",
     "\n",
@@ -361,23 +544,6 @@
     "- **Maintainability:** Clear modular structure simplifies updates and maintenance.\n",
     "\n",
     "- **Real-World Modeling:** Natural mapping to real-world entities."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Criticisms**\n",
-    "\n",
-    "- **Focus on Objects:** May overshadow algorithms and functional aspects.\n",
-    "\n",
-    "- **Time-Consuming:** Can be time-consuming to write and compile.\n",
-    "\n",
-    "- **Steeper Learning Curve:** Concepts can be difficult for beginners.\n",
-    "\n",
-    "- **Overhead:** Performance overhead due to abstraction layers.\n",
-    "\n",
-    "- **Complexity:** Can lead to complex and tightly coupled class hierarchies.\n"
    ]
   },
   {
