--- a/OOP_Exercise.ipynb
+++ b/OOP_Exercise.ipynb
@@ -116,7 +116,32 @@
     "- Create a `QuizSession` class.\n",
     "- Add attributes for `deck`, `score`, and `questions_asked`.\n",
     "- Implement a method to start the quiz session (`start_session`), asking questions until the user decides to stop.\n",
-    "- Implement a method to show the current score (`show_score`)."
+    "- Implement a method to show the current score (`show_score`).\n",
+    "\n",
+    "**Command Line Input:** \n",
+    "- The function `input(\"(some question) \")` displays a prompt on the command line and waits for the user to enter their response. It then returns the user's input as a string.\n",
+    "- Using `input` within a while loop enables continuous interaction with the user,\n",
+    "- To help get you started, we've included a template for what your `start_session` could look like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_session(self):\n",
+    "    while True: # loop until we no longer want to be interacting with user input\n",
+    "\n",
+    "        # set up the flashcard\n",
+    "\n",
+    "        user_answer = input(\"Your answer: \")\n",
+    "\n",
+    "        # do something about the answer\n",
+    "\n",
+    "        if input(\"Do you want to continue? (y/n): \").lower() != 'y':\n",
+    "            break\n",
+    "    self.show_score()"
    ]
   },
   {
@@ -224,6 +249,11 @@
     "- Maybe you want to let users edit flashcards or decks from the command line?\n",
     "- Whatever you like! ¯\\\\\\_(ツ)\\_/¯"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
