--- a/OOP_Demo.ipynb
+++ b/OOP_Demo.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo: The Pillars of OOP"
+    "# Demo: The Pillars of OOP\n",
+    "\n",
+    "The pillars of OOP are principles that guide the design and implementation of object oriented systems. These concepts help ensure that your code is modular, reusable, and maintainable."
    ]
   },
   {
@@ -17,24 +19,6 @@
     "# ruff: noqa\n",
     "\n",
     "# Notes to self, when presenting: (⌘+K,Z for zen mode; ⌘+J to toggle terminal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class EmailService:\n",
-    "    def send_email(self, recipient, subject, message):\n",
-    "        print(f\"Sending email to {recipient}\\nSubject: {subject}\\nMessage: {message}\")\n",
-    "\n",
-    "# Usage\n",
-    "email_service = EmailService()\n",
-    "email_service.send_email(\"user@example.com\", \"Welcome!\", \"Thank you for signing up.\")\n",
-    "# Output: Sending email to user@example.com\n",
-    "#         Subject: Welcome!\n",
-    "#         Message: Thank you for signing up."
    ]
   },
   {
@@ -100,22 +84,6 @@
     "\n",
     "my_instance = ClassName(1, 2) # this is an instance of the class\n",
     "print(my_instance.method_name(3)) # prints 6"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What are the pillars?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can think of the pillars of OOP as principles that guide the design and implementation of object oriented systems. \n",
-    " \n",
-    " These principles help ensure that your code is modular, reusable, and maintainable."
    ]
   },
   {
