--- a/OOP_Exercise.ipynb
+++ b/OOP_Exercise.ipynb
@@ -106,6 +106,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage for Deck class:\n",
+    "\n",
+    "deck = Deck()\n",
+    "flashcard1 = Flashcard(\"Which pillar of OOP allows objects to be used interchangeably?\", \"Polymorphism\")\n",
+    "flashcard2 = Flashcard(\"Which pillar of OOP involves hiding the internal state of objects?\", \"Encapsulation\", [\"Abstraction\", \"Encapsulation\", \"Inheritance\", \"Polymorphism\"], q_type='multiple_choice')\n",
+    "deck.add_flashcard(flashcard1)\n",
+    "deck.add_flashcard(flashcard2)\n",
+    "\n",
+    "# Test adding and reviewing flashcards\n",
+    "assert len(deck.flashcards) == 2, \"Test failed: Expected 2 flashcards in the deck.\"\n",
+    "\n",
+    "print(\"Flashcards in the deck:\")\n",
+    "deck.review_flashcards()\n",
+    "\n",
+    "# Test getting a random flashcard\n",
+    "random_flashcard = deck.get_random_flashcard()\n",
+    "print(\"\\nRandom flashcard:\")\n",
+    "random_flashcard.display()\n",
+    "\n",
+    "deck.remove_flashcard(flashcard1)\n",
+    "assert len(deck.flashcards) == 1, \"Test failed: Expected 1 flashcard in the deck after removal.\"\n",
+    "\n",
+    "print(\"All tests passed!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -154,6 +185,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage for QuizSession class:\n",
+    "\n",
+    "deck = Deck()\n",
+    "deck.add_flashcard(Flashcard(\"Which pillar of OOP allows different objects to be treated as instances of the same class?\", \"Polymorphism\"))\n",
+    "deck.add_flashcard(Flashcard(\"Which pillar of OOP involves hiding the internal state of objects?\", \"Encapsulation\", [\"Abstraction\", \"Encapsulation\", \"Inheritance\", \"Polymorphism\"], q_type='multiple_choice'))\n",
+    "\n",
+    "quiz_session = QuizSession(deck)\n",
+    "quiz_session.start_session()\n",
+    "\n",
+    "# This is an interactive session, so manually check the score display at the end."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,6 +242,27 @@
     "    def display_scores(self):\n",
     "        for date, score in self.scores:\n",
     "            print(f\"{date}: {score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage for ScoreTracker class:\n",
+    "\n",
+    "tracker = ScoreTracker()\n",
+    "tracker.record_score(5)\n",
+    "tracker.record_score(8)\n",
+    "\n",
+    "# Test recording and displaying scores\n",
+    "assert len(tracker.scores) == 2, \"Test failed: Expected 2 recorded scores.\"\n",
+    "\n",
+    "print(\"Score history:\")\n",
+    "tracker.display_scores()\n",
+    "\n",
+    "print(\"All tests passed!\")"
    ]
   },
   {
